--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="scontainer">
             <input type="text" id ="moviename">
-            <button type="submit" id="btn">Search</button>
+            <button id="btn">Search</button>
             <div id="result"></div>
         </div>
         
