--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="container">
         <div class="scontainer">
             <input type="text" id ="moviename">
+            <p class="pone">Enter the movie name *</p>
             <button id="btn">Search</button>
             <div id="result"></div>
         </div>
